--- a/Atividades HTML & CSS/Aula 1 Site de compra de TV/Do zero/index.html
+++ b/Atividades HTML & CSS/Aula 1 Site de compra de TV/Do zero/index.html
@@ -9,59 +9,67 @@
   <body>
     <main>
       <section>
-        <figure>
-          <img src="imagem-smart-tv.png" alt="Smart TV" width="400px" />
-          <figcaption class="Legenda_da_TV">Smart TV da marca XYZ</figcaption>
-        </figure>
-
         <h1>Smart TV <spam class="polegadas">75"</spam> da marca XYZ</h1>
-        <a class="Link_compra" href="#">Quero comprar agora mesmo!</a>
+        <div class="container-figure">
+          <figure>
+            <img src="imagem-smart-tv.png" alt="Smart TV" />
+            <figcaption class="Legenda_da_TV">Smart TV da marca XYZ</figcaption>
+          </figure>
+          <div class="container-precoCondicoes">
+            <div class="container-preco">
+              <h2>Preço</h2>
 
-        <h2>Preço</h2>
-        <p><strong class="Preço">R$ 4.999</strong> ou 12xR$ 416,58</p>
-        <p><b class="desconto">Desconto de 10%</b> no PIX</p>
+              <div>
+                <p><strong class="Preço">R$ 4.999</strong> ou 12xR$ 416,58</p>
+                <p><b class="desconto">Desconto de 10%</b> no PIX</p>
+              </div>
+            </div>
 
-        <hr />
-      </section>
-
-      <section>
-        <div class="condicoes">
-          <h2>Condições</h2>
-          <p>Parcelamento <i class="juros">sem juros</i></p>
-          <p><em class="Frete">Frete grátis</em></p>
+            <div class="condicoes">
+              <h2>Condições</h2>
+              <div>
+                <p>Parcelamento <i class="juros">sem juros</i></p>
+                <p><em class="Frete">Frete grátis</em></p>
+              </div>
+            </div>
+            <a class="Link_compra" href="#">Quero comprar agora mesmo!</a>
+          </div>
         </div>
-        <hr />
       </section>
+
       <section>
         <h2>Características</h2>
-        <div>
-          <h3>Inteligência Artificial & Smart</h3>
-          <ul>
-            <li>Alexa</li>
-            <li>Google Assistente</li>
-            <li>Game Optimizer</li>
-            <li>Configuração da família</li>
-          </ul>
-        </div>
 
-        <div>
-          <h3>Imagem</h3>
-          <ul>
-            <li>4K UHD</li>
-            <li>Processador XYZ</li>
-            <li>HDR</li>
-            <li>HDMI 2.0</li>
-          </ul>
-        </div>
+        <div class="container-listas">
+          <div class="container-lista">
+            <h3>Inteligência Artificial & Smart</h3>
+            <ul>
+              <li>Alexa</li>
+              <li>Google Assistente</li>
+              <li>Game Optimizer</li>
+              <li>Configuração da família</li>
+            </ul>
+          </div>
 
-        <div>
-          <h3>Conexões</h3>
-          <ul>
-            <li>3 Entradas HDMI 2.0</li>
-            <li>2 Entradas USB</li>
-            <li>1 Bluetooth In/Out</li>
-            <li>1 Saída digital óptica</li>
-          </ul>
+          <div class="container-lista">
+            <h3>Imagem</h3>
+            <ul>
+              <li>4K UHD</li>
+              <li>Processador XYZ</li>
+              <li>HDR</li>
+              <li>HDMI 2.0</li>
+            </ul>
+          </div>
+
+          <div class="container-lista">
+            <h3>Conexões</h3>
+            <ul>
+              <li>3 Entradas HDMI 2.0</li>
+              <li>2 Entradas USB</li>
+              <li>1 Bluetooth In/Out</li>
+              <li>1 Saída digital óptica</li>
+            </ul>
+          </div>
         </div>
       </section>
       <img
